# rust-thermometer

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile.template  LICENSE  LICENSE.md  README.md  launch-app.sh  local-push.env  resin-sync.yml
docs/: local-development.md  local-push.md
scripts/: deploy.sh  local-push.sh
src/: config.rs  error.rs  log.rs  main.rs  state.rs  temperature.rs
src/app/: mod.rs  model.rs  view.rs
src/app/assets/: font.rs  image.rs  mod.rs
src/processing/: mod.rs  temperature.rs
src/processing/temperature/: mod.rs  real.rs  simulation.rs
src/w1/: device.rs  mod.rs
src/w1/thermometer/: ds18b20.rs  mod.rs
