[package]
name = "thermometer"
version = "0.0.2"
authors = ["Robert Vojta <zrzka@users.noreply.github.com>"]

[dependencies]
chrono = "0.4"
clap = "2"
find_folder = "0.3.0"
futures = "0.1.21"
lazy_static = "1"
piston_window = "0.80"
tokio = "0.1.7"
tokio-fs = "0.1.1"
tokio-codec = "0.1.0"
tokio-timer = "0.2.4"

[features]
default = []
simulate-temperature = []
